--- a/mini-project-I.ipynb
+++ b/mini-project-I.ipynb
@@ -85,7 +85,8 @@
    "outputs": [],
    "source": [
     "# We send the request to the API\n",
-    "res = re.get(url+url_append)"
+    "# NOTE: if you don't have your APP_KEY, run this without the url_append\n",
+    "res = requests.get(url+url_append)"
    ]
   },
   {
@@ -95,7 +96,7 @@
    "outputs": [],
    "source": [
     "# We can check if the request was successful\n",
-    "res.json()"
+    "res.status_code"
    ]
   },
   {
@@ -103,7 +104,10 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# We can export the information that was returned using method .json()\n",
+    "res.json()"
+   ]
   },
   {
    "cell_type": "code",
@@ -213,7 +217,7 @@
    "metadata": {},
    "source": [
     "## Task\n",
-    "How many station has `victoria` line. How many times a day does this line leave from Victoria Station?"
+    "How many station has `victoria` line?"
    ]
   },
   {
