fixing typos in readme

--- a/mini-project-I-part-II.ipynb
+++ b/mini-project-I-part-II.ipynb
@@ -34,7 +34,7 @@
     "url = \"/search/movie\"\n",
     "\n",
     "query = 'titanic'\n",
-    "api_key = 'your-key'\n",
+    "api_key = os.environ[\"<your api key name>\"]\n",
     "params = f'?query={query}&api_key={api_key}' "
    ]
   },
