--- a/mini-project-I.ipynb
+++ b/mini-project-I.ipynb
@@ -54,8 +54,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "app_id = '<your App ID>'\n",
-    "app_key = '<your App Key>'\n",
+    "# don't forget package os\n",
+    "app_id = os.environ[\"<your app id name>\"]\n",
+    "app_key = os.environ[\"<your app key name>\"]\n",
     "url_append = f'?app_id={app_id}&app_key={app_key}' "
    ]
   },
@@ -239,14 +240,14 @@
    "metadata": {},
    "source": [
     "## Task\n",
-    "Plan the journey from Heathrow Airport to Tower Bridge using Public Transport, Taxi or Bike? Which way is the fastest? Example output:\n",
+    "Plan the journey from Heathrow Airport to Tower Bridge using Bus and Tube? Which way is faster? Example output:\n",
     "```\n",
     "Planned duration:\n",
-    "Public Transport: x minutes\n",
-    "Bike: y minutes\n",
+    "Bus: x minutes\n",
+    "Tube: y minutes\n",
     "```\n",
     "\n",
-    "We need to search the documentation for correct requests."
+    "We need to search the documentation for correct requests and parameters we need."
    ]
   },
   {
