--- a/mini-project-I-part-II.ipynb
+++ b/mini-project-I-part-II.ipynb
@@ -12,10 +12,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 193,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import requests\n",
+    "import os\n",
+    "import json"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -26,21 +30,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 165,
    "metadata": {},
    "outputs": [],
    "source": [
     "base = \"https://api.themoviedb.org/3\"\n",
     "url = \"/search/movie\"\n",
     "\n",
-    "query = 'titanic'\n",
-    "api_key = os.environ[\"<your api key name>\"]\n",
-    "params = f'?query={query}&api_key={api_key}' "
+    "query = 'Mad Max Fury Road'\n",
+    "api_key = os.environ['MOVIES_API_KEY']\n",
+    "params = f'?query={query}&api_key={api_key}'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 166,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,20 +53,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 94,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "200"
+      ]
+     },
+     "execution_count": 94,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "res.status_code"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 149,
    "metadata": {},
    "outputs": [],
    "source": [
-    "res.json()"
+    "mov = res.json()\n",
+    "#print(json.dumps(mov,indent=2))"
    ]
   },
   {
@@ -96,17 +112,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 131,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "mov_id = mov['results'][0]['id']\n",
+    "url2 = '/movie/'\n",
+    "params2 = f'{mov_id}?api_key={api_key}'\n",
+    "mad = requests.get(base + url2 + params2)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 132,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Mad Max: Fury Road', '2015-05-13', 121, 378858340, 270, 19590, 7.558]\n"
+     ]
+    }
+   ],
+   "source": [
+    "madjs = mad.json()\n",
+    "#print(json.dumps(mad2, indent=2))\n",
+    "\n",
+    "mad_info = [madjs['original_title'], madjs['release_date'],madjs['runtime'],madjs['revenue'],len(madjs['overview']),madjs['vote_count'],madjs['vote_average']]\n",
+    "print(mad_info)"
+   ]
   },
   {
    "cell_type": "code",
@@ -136,24 +171,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 134,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "query_act = 'Rooney Mara'\n",
+    "params_act_s = f'?query={query_act}&api_key={api_key}'\n",
+    "url_act_s='/search/person'"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 148,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "res_act = requests.get(base+url_act_s+params_act)\n",
+    "act = res_act.json()\n",
+    "act_id = act['results'][0]['id']\n",
+    "url_act_o = '/person/'\n",
+    "params_act_o = f'{act_id}?api_key={api_key}'\n",
+    "roo = requests.get(base + url_act_o + params_act_o)\n",
+    "roojs = roo.json()\n",
+    "#print(json.dumps(roojs,indent=2))"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 140,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Rooney Mara', '1985-04-17', 'Bedford, New York, USA', 722]\n"
+     ]
+    }
+   ],
+   "source": [
+    "roon = [roojs['name'], roojs['birthday'], roojs['place_of_birth'], len(roojs['biography'])]\n",
+    "print(roon)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -170,24 +229,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 141,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "query_tv = 'Game of Thrones'\n",
+    "params_tv_s = f'?query={query_tv}&api_key={api_key}'\n",
+    "url_tv_s='/search/tv'"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 160,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "res_tv = requests.get(base+url_tv_s+params_tv_s)\n",
+    "tv = res_tv.json()\n",
+    "tv_id = tv['results'][0]['id']\n",
+    "url_tv_o = '/tv/'\n",
+    "params_tv_o = f'{tv_id}?api_key={api_key}'\n",
+    "game = requests.get(base + url_tv_o + params_tv_o)\n",
+    "gamejs = game.json()\n",
+    "#print(json.dumps(gamejs,indent=2))"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 159,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Game of Thrones', '2011-04-17', 8, 73, ['Sci-Fi & Fantasy', 'Drama', 'Action & Adventure']]\n"
+     ]
+    }
+   ],
+   "source": [
+    "gen = []\n",
+    "for genre in gamejs['genres']:\n",
+    "    gen.append(genre['name'])\n",
+    "\n",
+    "got = [gamejs['name'], gamejs['first_air_date'], gamejs['number_of_seasons'], gamejs['number_of_episodes'], gen]\n",
+    "print(got)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -202,22 +289,56 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 191,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "time = '/week'\n",
+    "url_t = '/trending/'\n",
+    "params_t = f'?api_key={api_key}'\n",
+    "tv_t = requests.get(base + url_t + 'tv' + time + params_t)\n",
+    "tv_trend = tv_t.json()\n",
+    "movie_t = requests.get(base + url_t + 'movie' + time + params_t)\n",
+    "movie_trend = movie_t.json()\n",
+    "people_t = requests.get(base + url_t + 'person' + time + params_t)\n",
+    "people_trend = people_t.json()"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 194,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['The Gray Man', 'Jurassic World Dominion', 'Thor: Love and Thunder', 'Doctor Strange in the Multiverse of Madness', 'The Black Phone']\n",
+      "['Stranger Things', 'Resident Evil', 'Ms. Marvel', 'The Boys', 'Westworld']\n",
+      "['赤坂丽', 'Tom Cruise', '雷火剑', 'Quentin Tarantino', 'Brad Pitt']\n"
+     ]
+    }
+   ],
+   "source": [
+    "i = 0\n",
+    "top_movies = []\n",
+    "top_shows = []\n",
+    "top_people = []\n",
+    "while i < 5:\n",
+    "    top_movies.append(movie_trend['results'][i]['original_title'])\n",
+    "    top_shows.append(tv_trend['results'][i]['name'])\n",
+    "    top_people.append(people_trend['results'][i]['name'])\n",
+    "    i += 1\n",
+    "\n",
+    "print(top_movies)\n",
+    "print(top_shows)\n",
+    "print(top_people)"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -231,7 +352,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.9.12"
   }
  },
  "nbformat": 4,
