--- a/mini-project-I.ipynb
+++ b/mini-project-I.ipynb
@@ -19,12 +19,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# import packages we need (remember what packages we used yesterday during the API session)\n",
-    "# IMPORT HERE"
+    "import requests\n",
+    "import os\n",
+    "import json"
    ]
   },
   {
@@ -50,51 +51,63 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "# don't forget package os\n",
-    "app_id = os.environ[\"<your app id name>\"]\n",
-    "app_key = os.environ[\"<your app key name>\"]\n",
-    "url_append = f'?app_id={app_id}&app_key={app_key}' "
+    "#app_id = os.environ[\"<your app id name>\"]\n",
+    "#app_key = os.environ[\"<your app key name>\"]\n",
+    "#url_append = f'?app_id={app_id}&app_key={app_key}' "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "print(url_append)"
+    "#print(url_append)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
     "# URL\n",
-    "url = \"https://api.tfl.gov.uk/AirQuality\""
+    "url = 'https://api.tfl.gov.uk/'\n",
+    "AirQuality = 'AirQuality'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
     "# We send the request to the API\n",
     "# NOTE: if you don't have your APP_KEY, run this without the url_append\n",
-    "res = requests.get(url+url_append)"
+    "res = requests.get(url + AirQuality)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "200"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# We can check if the request was successful\n",
     "res.status_code"
@@ -102,20 +115,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
     "# We can export the information that was returned using method .json()\n",
-    "res.json()"
+    "data = res.json()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#print(json.dumps(data, indent=2))"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -127,10 +142,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Low air pollution forecast valid from Saturday 30 July to end of Saturday 30 July GMT\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(data['currentForecast'][1]['forecastSummary'])"
+   ]
   },
   {
    "cell_type": "code",
@@ -157,17 +182,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "Modes = '/Line/Meta/Modes'\n",
+    "res2 = requests.get(url + Modes)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['bus', 'cable-car', 'coach', 'cycle', 'cycle-hire', 'dlr', 'elizabeth-line', 'interchange-keep-sitting', 'interchange-secure', 'national-rail', 'overground', 'replacement-bus', 'river-bus', 'river-tour', 'taxi', 'tram', 'tube', 'walking']\n",
+      "Number of different modes of transport is: 18\n"
+     ]
+    }
+   ],
+   "source": [
+    "data2 = res2.json()\n",
+    "#print(json.dumps(data2,indent=2))\n",
+    "\n",
+    "trans = []\n",
+    "for mode in data2:\n",
+    "    trans.append(mode['modeName'])\n",
+    "print(trans)\n",
+    "print(f'Number of different modes of transport is: {len(trans)}')"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -179,17 +225,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "BikePoint = '/BikePoint'\n",
+    "res3 = requests.get(url + BikePoint)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Transport for London operates 792 BikePoints)\n",
+      "There are 20945 total docks in all BikePoints\n"
+     ]
+    }
+   ],
+   "source": [
+    "data3 = res3.json()\n",
+    "#print(json.dumps(data3, indent=2))\n",
+    "points = 0\n",
+    "docks = 0\n",
+    "for bikepoint in data3:\n",
+    "    points += 1\n",
+    "    docks += int(bikepoint['additionalProperties'][8]['value'])\n",
+    "print(f'Transport for London operates {points} BikePoints)')\n",
+    "print(f'There are {docks} total docks in all BikePoints')"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -201,17 +269,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "tb = '/Line/Mode/tube,bus'\n",
+    "res4 = requests.get(url + tb)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "There are 631 bus lines in London\n",
+      "There are 11 tube lines in London. They are ['Bakerloo', 'Central', 'Circle', 'District', 'Hammersmith & City', 'Jubilee', 'Metropolitan', 'Northern', 'Piccadilly', 'Victoria', 'Waterloo & City']\n"
+     ]
+    }
+   ],
+   "source": [
+    "data4 = res4.json()\n",
+    "#print(json.dumps(data4, indent=2))\n",
+    "buses = []\n",
+    "tubes = []\n",
+    "for line in data4:\n",
+    "    if line['modeName'] == 'bus':\n",
+    "        buses.append(line['name'])\n",
+    "    elif line['modeName'] == 'tube':\n",
+    "        tubes.append(line['name'])\n",
+    "print(f'There are {len(buses)} bus lines in London')\n",
+    "print(f'There are {len(tubes)} tube lines in London. They are {(tubes)}')"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -223,17 +315,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "vic = '/Line/victoria/Route/Sequence/all'\n",
+    "res5 = requests.get(url + vic)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The victoria line has 16 stations\n"
+     ]
+    }
+   ],
+   "source": [
+    "data5 = res5.json()\n",
+    "#print(json.dumps(data5, indent=2))\n",
+    "stats = 0\n",
+    "stations = data5['stations']\n",
+    "for station in stations:\n",
+    "    stats += 1\n",
+    "print(f'The victoria line has {stats} stations')"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -252,10 +363,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "place_cats = '/Place/Meta/PlaceTypes'\n",
+    "res6 = requests.get(url + place_cats)\n",
+    "res7 = requests.get(url + '/Place/Type/OpportunityAreas')"
+   ]
   },
   {
    "cell_type": "code",
@@ -266,10 +381,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "data6 = res6.json()\n",
+    "data7 = res7.json()\n",
+    "#print(json.dumps(data7, indent=2))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#journey = '/Journey/JourneyResults/{from}/to/{to}'\n",
+    "#res6 = requests.get(url + journey)"
+   ]
   },
   {
    "cell_type": "code",
@@ -288,7 +417,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -302,7 +431,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.9.12"
   }
  },
  "nbformat": 4,
