Uploaded with all tasks completed

--- a/mini-project-I.ipynb
+++ b/mini-project-I.ipynb
@@ -12,14 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,20 +20,6 @@
     "import os\n",
     "import json"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
@@ -51,28 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# don't forget package os\n",
-    "#app_id = os.environ[\"<your app id name>\"]\n",
-    "#app_key = os.environ[\"<your app key name>\"]\n",
-    "#url_append = f'?app_id={app_id}&app_key={app_key}' "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#print(url_append)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -83,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -94,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -103,7 +61,7 @@
        "200"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -115,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -125,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -142,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -182,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -192,15 +150,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['bus', 'cable-car', 'coach', 'cycle', 'cycle-hire', 'dlr', 'elizabeth-line', 'interchange-keep-sitting', 'interchange-secure', 'national-rail', 'overground', 'replacement-bus', 'river-bus', 'river-tour', 'taxi', 'tram', 'tube', 'walking']\n",
-      "Number of different modes of transport is: 18\n"
+      "['bus', 'cable-car', 'cycle-hire', 'dlr', 'elizabeth-line', 'overground', 'replacement-bus', 'river-bus', 'river-tour', 'tram', 'tube']\n",
+      "Number of different modes of transport is: 11\n"
      ]
     }
    ],
@@ -210,7 +168,8 @@
     "\n",
     "trans = []\n",
     "for mode in data2:\n",
-    "    trans.append(mode['modeName'])\n",
+    "    if mode['isTflService'] == True:\n",
+    "        trans.append(mode['modeName'])\n",
     "print(trans)\n",
     "print(f'Number of different modes of transport is: {len(trans)}')"
    ]
@@ -225,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -235,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -269,7 +228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -279,7 +238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -315,7 +274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -325,7 +284,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -363,13 +322,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
-    "place_cats = '/Place/Meta/PlaceTypes'\n",
-    "res6 = requests.get(url + place_cats)\n",
-    "res7 = requests.get(url + '/Place/Type/OpportunityAreas')"
+    "journey = '/Journey/JourneyResults/Heathrow Airport/to/Tower Bridge'\n",
+    "journey_bus = '/Journey/JourneyResults/Heathrow Airport, Heathrow Airport Terminal 3/to/City of London, Tower Bridge?mode=bus'\n",
+    "journey_tube = '/Journey/JourneyResults/Heathrow Airport, Heathrow Airport Terminal 3/to/City of London, Tower Bridge?mode=tube'\n",
+    "res6_bus = requests.get(url + journey_bus)\n",
+    "res6_tube = requests.get(url + journey_tube)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "136\n",
+      "321\n"
+     ]
+    }
+   ],
+   "source": [
+    "data6_bus = res6_bus.json()\n",
+    "print(json.dumps(data6_bus['journeys'][0]['duration'], indent = 2))\n",
+    "\n",
+    "data6_tube = res6_tube.json()\n",
+    "print(json.dumps(data6_tube['journeys'][0]['duration'], indent = 2))"
    ]
   },
   {
@@ -381,24 +364,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "data6 = res6.json()\n",
-    "data7 = res7.json()\n",
-    "#print(json.dumps(data7, indent=2))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 21,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#journey = '/Journey/JourneyResults/{from}/to/{to}'\n",
-    "#res6 = requests.get(url + journey)"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
