Fixed code for calculating BikePoints to reflect uninstalled BikePoints

--- a/mini-project-I.ipynb
+++ b/mini-project-I.ipynb
@@ -184,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -194,26 +194,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Transport for London operates 792 BikePoints)\n",
-      "There are 20945 total docks in all BikePoints\n"
+      "Transport for London operates 789 BikePoints)\n",
+      "There are 20882 total docks in all BikePoints\n"
      ]
     }
    ],
    "source": [
     "data3 = res3.json()\n",
-    "#print(json.dumps(data3, indent=2))\n",
+    "#print(json.dumps(data3[82]['additionalProperties'], indent=2))\n",
     "points = 0\n",
     "docks = 0\n",
     "for bikepoint in data3:\n",
-    "    points += 1\n",
-    "    docks += int(bikepoint['additionalProperties'][8]['value'])\n",
+    "    if bikepoint['additionalProperties'][4]['value'] == \"\":\n",
+    "        points += 1\n",
+    "        docks += int(bikepoint['additionalProperties'][8]['value'])\n",
     "print(f'Transport for London operates {points} BikePoints)')\n",
     "print(f'There are {docks} total docks in all BikePoints')"
    ]
