Updated with last task of mini-project-I updated to reflect updated instructions and mini-project-I-part-II refactored into one function that outputs the asked-for information

--- a/mini-project-I-part-II.ipynb
+++ b/mini-project-I-part-II.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 193,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,54 +30,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 165,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
-    "base = \"https://api.themoviedb.org/3\"\n",
-    "url = \"/search/movie\"\n",
+    "#base = \"https://api.themoviedb.org/3\"\n",
+    "#url = \"/search/movie\"\n",
     "\n",
-    "query = 'Mad Max Fury Road'\n",
-    "api_key = os.environ['MOVIES_API_KEY']\n",
-    "params = f'?query={query}&api_key={api_key}'"
+    "#query = 'Mad Max Fury Road'\n",
+    "#api_key = os.environ['MOVIES_API_KEY']\n",
+    "#params = f'?query={query}&api_key={api_key}'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 166,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
-    "res = requests.get(base+url+params)"
+    "#res = requests.get(base+url+params)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "200"
-      ]
-     },
-     "execution_count": 94,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "res.status_code"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 149,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
-    "mov = res.json()\n",
+    "#res.status_code"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#mov = res.json()\n",
     "#print(json.dumps(mov,indent=2))"
    ]
   },
@@ -90,10 +79,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 90,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "api_key = os.environ['MOVIES_API_KEY']\n",
+    "\n",
+    "def get_info(search_term, search_type, categories):\n",
+    "    '''\n",
+    "    Takes a search_term (which is the name of a movie TV show or actor, as a string), a search_type ('movie' 'person' or 'tv'),\n",
+    "    and a list of strings containing the categories about which information is desired\n",
+    "    '''\n",
+    "    base = \"https://api.themoviedb.org/3\"\n",
+    "    query = str(search_term)\n",
+    "    search_type = str(search_type)\n",
+    "    search_url = f'/search/{search_type}?query={query}&api_key={api_key}'\n",
+    "    result = requests.get(base + search_url).json()['results'][0]['id']\n",
+    "    results_url = f'/{search_type}/{result}?api_key={api_key}'\n",
+    "    res = requests.get(base + results_url).json()\n",
+    "    res_list = []\n",
+    "    for category in categories:\n",
+    "        res_list.append(res[category])\n",
+    "    return res_list"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -112,35 +120,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
-    "mov_id = mov['results'][0]['id']\n",
-    "url2 = '/movie/'\n",
-    "params2 = f'{mov_id}?api_key={api_key}'\n",
-    "mad = requests.get(base + url2 + params2)"
+    "#mov_id = mov['results'][0]['id']\n",
+    "#url2 = '/movie/'\n",
+    "#params2 = f'{mov_id}?api_key={api_key}'\n",
+    "#mad = requests.get(base + url2 + params2)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 91,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['Mad Max: Fury Road', '2015-05-13', 121, 378858340, 270, 19590, 7.558]\n"
+      "['Mad Max: Fury Road', '2015-05-13', 121, 378858340, 270, 19594, 7.558]\n"
      ]
     }
    ],
    "source": [
-    "madjs = mad.json()\n",
-    "#print(json.dumps(mad2, indent=2))\n",
-    "\n",
-    "mad_info = [madjs['original_title'], madjs['release_date'],madjs['runtime'],madjs['revenue'],len(madjs['overview']),madjs['vote_count'],madjs['vote_average']]\n",
-    "print(mad_info)"
+    "movie_categories = ['original_title', 'release_date', 'runtime', 'revenue', 'overview', 'vote_count', 'vote_average']\n",
+    "mad = get_info('Mad Max: Fury Road', 'movie', movie_categories)\n",
+    "mad[4] = len(mad[4])\n",
+    "print(mad)\n",
+    "#print(json.dumps(mad2, indent=2))"
    ]
   },
   {
@@ -171,34 +179,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [],
    "source": [
-    "query_act = 'Rooney Mara'\n",
-    "params_act_s = f'?query={query_act}&api_key={api_key}'\n",
-    "url_act_s='/search/person'"
+    "#query_act = 'Rooney Mara'\n",
+    "#params_act_s = f'?query={query_act}&api_key={api_key}'\n",
+    "#url_act_s='/search/person'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 148,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [],
    "source": [
-    "res_act = requests.get(base+url_act_s+params_act)\n",
-    "act = res_act.json()\n",
-    "act_id = act['results'][0]['id']\n",
-    "url_act_o = '/person/'\n",
-    "params_act_o = f'{act_id}?api_key={api_key}'\n",
-    "roo = requests.get(base + url_act_o + params_act_o)\n",
-    "roojs = roo.json()\n",
+    "#res_act = requests.get(base+url_act_s+params_act_s)\n",
+    "#act = res_act.json()\n",
+    "#act_id = act['results'][0]['id']\n",
+    "#url_act_o = '/person/'\n",
+    "#params_act_o = f'{act_id}?api_key={api_key}'\n",
+    "#roo = requests.get(base + url_act_o + params_act_o)\n",
+    "#roojs = roo.json()\n",
     "#print(json.dumps(roojs,indent=2))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 140,
+   "execution_count": 92,
    "metadata": {},
    "outputs": [
     {
@@ -210,8 +218,10 @@
     }
    ],
    "source": [
-    "roon = [roojs['name'], roojs['birthday'], roojs['place_of_birth'], len(roojs['biography'])]\n",
-    "print(roon)"
+    "person_categories = ['name', 'birthday', 'place_of_birth', 'biography']\n",
+    "rooney = get_info('Rooney Mara', 'person', person_categories)\n",
+    "rooney[3] = len(rooney[3])\n",
+    "print(rooney)"
    ]
   },
   {
@@ -229,34 +239,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 141,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [],
    "source": [
-    "query_tv = 'Game of Thrones'\n",
-    "params_tv_s = f'?query={query_tv}&api_key={api_key}'\n",
-    "url_tv_s='/search/tv'"
+    "#query_tv = 'Game of Thrones'\n",
+    "#params_tv_s = f'?query={query_tv}&api_key={api_key}'\n",
+    "#url_tv_s='/search/tv'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 160,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [],
    "source": [
-    "res_tv = requests.get(base+url_tv_s+params_tv_s)\n",
-    "tv = res_tv.json()\n",
-    "tv_id = tv['results'][0]['id']\n",
-    "url_tv_o = '/tv/'\n",
-    "params_tv_o = f'{tv_id}?api_key={api_key}'\n",
-    "game = requests.get(base + url_tv_o + params_tv_o)\n",
-    "gamejs = game.json()\n",
+    "#res_tv = requests.get(base+url_tv_s+params_tv_s)\n",
+    "#tv = res_tv.json()\n",
+    "#tv_id = tv['results'][0]['id']\n",
+    "#url_tv_o = '/tv/'\n",
+    "#params_tv_o = f'{tv_id}?api_key={api_key}'\n",
+    "#game = requests.get(base + url_tv_o + params_tv_o)\n",
+    "#gamejs = game.json()\n",
     "#print(json.dumps(gamejs,indent=2))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 159,
+   "execution_count": 93,
    "metadata": {},
    "outputs": [
     {
@@ -268,11 +278,14 @@
     }
    ],
    "source": [
-    "gen = []\n",
-    "for genre in gamejs['genres']:\n",
-    "    gen.append(genre['name'])\n",
+    "tv_categories = ['name', 'first_air_date', 'number_of_seasons', 'number_of_episodes', 'genres']\n",
+    "got = get_info('Game of Thrones', 'tv', tv_categories)\n",
+    "got[4] = [genre['name'] for genre in got[4]]\n",
+    "#gen = []\n",
+    "#for genre in gamejs['genres']:\n",
+    "#    gen.append(genre['name'])\n",
     "\n",
-    "got = [gamejs['name'], gamejs['first_air_date'], gamejs['number_of_seasons'], gamejs['number_of_episodes'], gen]\n",
+    "#got = [gamejs['name'], gamejs['first_air_date'], gamejs['number_of_seasons'], gamejs['number_of_episodes'], gen]\n",
     "print(got)"
    ]
   },
@@ -289,7 +302,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 191,
+   "execution_count": 88,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -306,7 +319,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 194,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [
     {
@@ -315,7 +328,7 @@
      "text": [
       "['The Gray Man', 'Jurassic World Dominion', 'Thor: Love and Thunder', 'Doctor Strange in the Multiverse of Madness', 'The Black Phone']\n",
       "['Stranger Things', 'Resident Evil', 'Ms. Marvel', 'The Boys', 'Westworld']\n",
-      "['赤坂丽', 'Tom Cruise', '雷火剑', 'Quentin Tarantino', 'Brad Pitt']\n"
+      "['赤坂丽', 'Tom Cruise', '雷火剑', 'Brad Pitt', 'Quentin Tarantino']\n"
      ]
     }
    ],
