--- a/mini-project-I.ipynb
+++ b/mini-project-I.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -61,7 +61,7 @@
        "200"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -100,14 +100,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Low air pollution forecast valid from Saturday 30 July to end of Saturday 30 July GMT\n"
+      "Moderate ozone air pollution forecast valid from Saturday 30 July to end of Saturday 30 July GMT\n"
      ]
     }
    ],
@@ -140,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -150,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -184,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -194,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -202,13 +202,13 @@
      "output_type": "stream",
      "text": [
       "Transport for London operates 789 BikePoints)\n",
-      "There are 20882 total docks in all BikePoints\n"
+      "There are 20883 total docks in all BikePoints\n"
      ]
     }
    ],
    "source": [
     "data3 = res3.json()\n",
-    "#print(json.dumps(data3[82]['additionalProperties'], indent=2))\n",
+    "#print(json.dumps(data3[1]['additionalProperties'], indent=2))\n",
     "points = 0\n",
     "docks = 0\n",
     "for bikepoint in data3:\n",
@@ -229,7 +229,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -239,7 +239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -275,7 +275,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -285,7 +285,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -323,37 +323,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
-    "journey = '/Journey/JourneyResults/Heathrow Airport/to/Tower Bridge'\n",
-    "journey_bus = '/Journey/JourneyResults/Heathrow Airport, Heathrow Airport Terminal 3/to/City of London, Tower Bridge?mode=bus'\n",
-    "journey_tube = '/Journey/JourneyResults/Heathrow Airport, Heathrow Airport Terminal 3/to/City of London, Tower Bridge?mode=tube'\n",
-    "res6_bus = requests.get(url + journey_bus)\n",
-    "res6_tube = requests.get(url + journey_tube)"
+    "journey_locats = '/Journey/JourneyResults/Heathrow Airport/to/Tower Bridge'\n",
+    "journey = '/Journey/JourneyResults/Heathrow Airport, Heathrow Airport Terminal 3/to/City of London, Tower Bridge'\n",
+    "res6 = requests.get(url + journey)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "136\n",
-      "321\n"
+      "[('total', 68), ('tube', 4), ('tube', 10), ('bus', 3)]\n"
      ]
     }
    ],
    "source": [
-    "data6_bus = res6_bus.json()\n",
-    "print(json.dumps(data6_bus['journeys'][0]['duration'], indent = 2))\n",
-    "\n",
-    "data6_tube = res6_tube.json()\n",
-    "print(json.dumps(data6_tube['journeys'][0]['duration'], indent = 2))"
+    "data6 = res6.json()\n",
+    "#print(json.dumps(data6['journeys'][0], indent = 2))\n",
+    "durations = [('total', data6['journeys'][0]['duration'])]\n",
+    "#print(json.dumps(data6['journeys'][0]['legs'], indent=2))\n",
+    "for leg in data6['journeys'][0]['legs']:\n",
+    "    if leg['mode']['name'] == 'bus' or leg['mode']['name'] == 'tube':\n",
+    "        durations.append((leg['mode']['name'], leg['duration']))\n",
+    "print(durations)"
    ]
   },
   {
